updated url and title correction

--- a/_posts/user_guide_python/density-of-states .ipynb
+++ b/_posts/user_guide_python/density-of-states .ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Plotting Density of States with Plotly and Pymatgen"
+    "# Plotting Density of States with <br />  Plotly and Pymatgen"
    ]
   },
   {
@@ -690,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -727,7 +727,7 @@
     "display(HTML('<link rel=\"stylesheet\" type=\"text/css\" href=\"https://help.plot.ly/documentation/all_static/css/ipython-notebook-custom.css\">'))\n",
     "\n",
     "import publisher\n",
-    "publisher.publish('density-of-states ', '/ipython-notebook/density-of-states', \n",
+    "publisher.publish('density-of-states ', '/ipython-notebooks/density-of-states/', \n",
     "                  'plotting the density of states and the band diagram using pymatgen and plotly', \n",
     "                  'Plotting Density of States with Plotly and Pymatgen')"
    ]
