--- a/_posts/user_guide_python/bezier.ipynb
+++ b/_posts/user_guide_python/bezier.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Plotting B&eacute;zier triangular patches with Python Plotly##"
+    "## Plotting B&eacute;zier Triangular Patches with <br /> Python Plotly##"
    ]
   },
   {
@@ -1452,7 +1452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -1501,7 +1501,7 @@
     "display(HTML('<link rel=\"stylesheet\" type=\"text/css\" href=\"https://help.plot.ly/documentation/all_static/css/ipython-notebook-custom.css\">'))\n",
     "\n",
     "import publisher\n",
-    "publisher.publish('bezier', '/ipython-notebooks/bezier-triangular-patches', \n",
+    "publisher.publish('bezier', '/ipython-notebooks/bezier-triangular-patches/', \n",
     "                  'Bézier Triangular Patches', \n",
     "                  'How to make bézier triangular patches with Python and Plotly graphs.')"
    ]
