--- a/_posts/user_guide_python/2d-kernel-density-distributions.ipynb
+++ b/_posts/user_guide_python/2d-kernel-density-distributions.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2D Kernel Density Distributions Using Plotly ##"
+    "## 2D Kernel Density Distributions Using Plotly"
    ]
   },
   {
@@ -518,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -556,7 +556,7 @@
     "display(HTML('<link rel=\"stylesheet\" type=\"text/css\" href=\"https://help.plot.ly/documentation/all_static/css/ipython-notebook-custom.css\">'))\n",
     "\n",
     "import publisher\n",
-    "publisher.publish('2d-kernel-density-distributions', '/ipython-notebook/2d-kernel-density-distributions', \n",
+    "publisher.publish('2d-kernel-density-distributions', '/ipython-notebooks/2d-kernel-density-distributions/', \n",
     "                  '2d Kernel Density Distributions', \n",
     "                  '2D Kernel Density Distributions Using Plotly')"
    ]
