update r doc for overwriting subplots

--- a/_posts/r/2015-07-30-subplots.Rmd
+++ b/_posts/r/2015-07-30-subplots.Rmd
@@ -121,6 +121,29 @@ layout(p,
 
 So, if you would like all of your axes to have the same properties, assign the properties in `layout` before splitting the traces into subplots.
 
+### Updating Subplots
+
+To overwrite or update subplots use `plotly_build()` with `subplot()` then set `filename`.
+
+Create an initial subplot:
+
+```{r, message=FALSE}
+iris$id <- as.integer(iris$Species)
+p <- plot_ly(iris, x = Petal.Length, y = Petal.Width, group = Species,
+						 xaxis = paste0("x", id), mode = "markers")
+p <- plotly_build(subplot(p))
+p$filename <- "overwrite_subplot"
+p
+```
+
+Then update or modify the plot and view the modifications in the same plot.
+
+```{r, message=FALSE}
+p <- layout(title="Overwrite Subplots")
+p <- plotly_build(subplot(p))
+p$filename <- "overwrite_subplot"
+```
+
 ### Subplot Maps
 
 Axes objects in maps are different than in cartesian `x`, `y` plots. With maps, each trace has a `geo` ID that assigns that trace the subplot with the same id. Just add a `geo = paste0("geo", id)` key inside `plot_ly` to assign traces to different subplots created with `subplot`.
