--- a/_posts/r/2015-07-30-subplots.md
+++ b/_posts/r/2015-07-30-subplots.md
@@ -27,7 +27,7 @@ subplot(
 ) %>% layout(showlegend = FALSE)
 ```
 
-<iframe height="600" id="igraph" scrolling="no" seamless="seamless" src="https://plot.ly/~RPlotBot/1658.embed" width="800" frameBorder="0"></iframe>
+<iframe height="600" id="igraph" scrolling="no" seamless="seamless" src="https://plot.ly/~RPlotBot/1849.embed" width="800" frameBorder="0"></iframe>
 
 ### Subplot Rows
 
@@ -45,7 +45,7 @@ subplot(
 ) %>% layout(showlegend = FALSE)
 ```
 
-<iframe height="600" id="igraph" scrolling="no" seamless="seamless" src="https://plot.ly/~RPlotBot/1660.embed" width="800" frameBorder="0"></iframe>
+<iframe height="600" id="igraph" scrolling="no" seamless="seamless" src="https://plot.ly/~RPlotBot/1851.embed" width="800" frameBorder="0"></iframe>
 
 ### Creating Subplots with `group`
 
@@ -69,7 +69,7 @@ p <- plot_ly(iris, x = Petal.Length, y = Petal.Width, group = Species,
 subplot(p)
 ```
 
-<iframe height="600" id="igraph" scrolling="no" seamless="seamless" src="https://plot.ly/~RPlotBot/1662.embed" width="800" frameBorder="0"></iframe>
+<iframe height="600" id="igraph" scrolling="no" seamless="seamless" src="https://plot.ly/~RPlotBot/1853.embed" width="800" frameBorder="0"></iframe>
 
 ### Customizing Axes
 
@@ -92,7 +92,7 @@ layout(
 )
 ```
 
-<iframe height="600" id="igraph" scrolling="no" seamless="seamless" src="https://plot.ly/~RPlotBot/1664.embed" width="800" frameBorder="0"></iframe>
+<iframe height="600" id="igraph" scrolling="no" seamless="seamless" src="https://plot.ly/~RPlotBot/1855.embed" width="800" frameBorder="0"></iframe>
 
 If you are familar with [plotly.js](https://plot.ly/javascript), you might notice that `subplot` is generating axis objects with the appropriate anchor and domain properties. If you are interested, [view how subplots are created in plotly.js](https://plot.ly/javascript/subplots) or [view the JSON representation of this graph](https://plot.ly/~RplotBot/1408.json).
 
@@ -112,7 +112,7 @@ p <- layout(
 subplot(p)
 ```
 
-<iframe height="600" id="igraph" scrolling="no" seamless="seamless" src="https://plot.ly/~RPlotBot/1666.embed" width="800" frameBorder="0"></iframe>
+<iframe height="600" id="igraph" scrolling="no" seamless="seamless" src="https://plot.ly/~RPlotBot/1857.embed" width="800" frameBorder="0"></iframe>
 
 Note that the `xaxis` and `yaxis` properties that are specified in `layout` are transferred to all of the `xaxis` and `yaxis` keys that are created in the `subplot` command. The example above could also be written as:
 
@@ -134,9 +134,36 @@ layout(p,
 )
 ```
 
-<iframe height="600" id="igraph" scrolling="no" seamless="seamless" src="https://plot.ly/~RPlotBot/1668.embed" width="800" frameBorder="0"></iframe>
+<iframe height="600" id="igraph" scrolling="no" seamless="seamless" src="https://plot.ly/~RPlotBot/1859.embed" width="800" frameBorder="0"></iframe>
 
 So, if you would like all of your axes to have the same properties, assign the properties in `layout` before splitting the traces into subplots.
+
+### Updating Subplots
+
+To overwrite or update subplots use `plotly_build()` with `subplot()` then set `filename`.
+
+Create an initial subplot:
+
+
+```r
+iris$id <- as.integer(iris$Species)
+p <- plot_ly(iris, x = Petal.Length, y = Petal.Width, group = Species,
+						 xaxis = paste0("x", id), mode = "markers")
+p <- plotly_build(subplot(p))
+p$filename <- "overwrite_subplot"
+p
+```
+
+<iframe height="600" id="igraph" scrolling="no" seamless="seamless" src="https://plot.ly/~RPlotBot/1819.embed" width="800" frameBorder="0"></iframe>
+
+Then update or modify the plot and view the results in the same plot.
+
+
+```r
+p <- layout(title="Overwrite Subplots")
+p <- plotly_build(subplot(p))
+p$filename <- "overwrite_subplot"
+```
 
 ### Subplot Maps
 
@@ -179,6 +206,6 @@ p <- plot_ly(df, type = 'scattergeo', lon = LON, lat = LAT, group = YEAR,
 subplot(p, nrows = 9)
 ```
 
-<iframe height="900" id="igraph" scrolling="no" seamless="seamless" src="https://plot.ly/~RPlotBot/1676.embed" width="800" frameBorder="0"></iframe>
+<iframe height="900" id="igraph" scrolling="no" seamless="seamless" src="https://plot.ly/~RPlotBot/1867.embed" width="800" frameBorder="0"></iframe>
 
 [View more examples of maps in plotly and R.](https://plot.ly/r/#maps)
