update r docs for overwriting subplots

--- a/_posts/r/2015-07-30-filenames.Rmd
+++ b/_posts/r/2015-07-30-filenames.Rmd
@@ -36,6 +36,27 @@ View your Plotly graphs at [https://plot.ly/organize](https://plot.ly/organize).
 ```{r, message=FALSE}
 plot_ly(x = c(1, 2), y = c(1, 2), filename="name-of-my-plotly-file")
 ```
+
+Overwriting your graph works a bit differently when using ```subplots```.
+To update a graph with ```subplots``` use ```plotly_build()``` and then assign the ```filename``` after.
+
+```{r, message=FALSE}
+iris$id <- as.integer(iris$Species)
+p <- plot_ly(iris, x = Petal.Length, y = Petal.Width, group = Species,
+						 xaxis = paste0("x", id), mode = "markers")
+p <- plotly_build(subplot(p))
+p$filename <- "overwrite_subplot"
+```
+
+Add modifications then see the updated graph at the same plotly URL:
+
+```{r, message=FALSE}
+p <- layout(title="Overwrite Subplots")
+p <- plotly_build(subplot(p))
+p$filename <- "overwrite_subplot"
+p
+```
+
 <br>
 If the filename contains "/", it will automatically create a plotly folder.
 
