--- a/_posts/r/2015-07-30-subplots.md
+++ b/_posts/r/2015-07-30-subplots.md
@@ -21,13 +21,13 @@ order: 2
 ```r
 library(plotly)
 subplot(
-  plot_ly(economics, x = date, y = uempmed, filename="r-docs/basic-subplot"),
+  plot_ly(economics, x = date, y = uempmed),
   plot_ly(economics, x = date, y = unemploy),
   margin = 0.05
 ) %>% layout(showlegend = FALSE)
 ```
 
-<iframe height="600" id="igraph" scrolling="no" seamless="seamless" src="https://plot.ly/~RPlotBot/1849.embed" width="800" frameBorder="0"></iframe>
+<iframe height="600" id="igraph" scrolling="no" seamless="seamless" src="https://plot.ly/~RPlotBot/1911.embed" width="800" frameBorder="0"></iframe>
 
 ### Subplot Rows
 
@@ -38,14 +38,14 @@ Specify the number of rows with `nrows`.
 # Basic subplot
 library(plotly)
 subplot(
-  plot_ly(economics, x = date, y = uempmed, filename="r-docs/basic-subplot"),
+  plot_ly(economics, x = date, y = uempmed),
   plot_ly(economics, x = date, y = unemploy),
   margin = 0.05,
   nrows=2
 ) %>% layout(showlegend = FALSE)
 ```
 
-<iframe height="600" id="igraph" scrolling="no" seamless="seamless" src="https://plot.ly/~RPlotBot/1851.embed" width="800" frameBorder="0"></iframe>
+<iframe height="600" id="igraph" scrolling="no" seamless="seamless" src="https://plot.ly/~RPlotBot/1913.embed" width="800" frameBorder="0"></iframe>
 
 ### Creating Subplots with `group`
 
@@ -54,10 +54,10 @@ A more powerful way to make subplots is by using the `group` argument to split t
 
 ```r
 plot_ly(iris, x = Petal.Length, y = Petal.Width,
-        group = Species, mode = "markers", filename="r-docs/grouped")
+        group = Species, mode = "markers")
 ```
 
-<iframe height="600" id="igraph" scrolling="no" seamless="seamless" src="https://plot.ly/~RPlotBot/1354.embed" width="800" frameBorder="0"></iframe>
+<iframe height="600" id="igraph" scrolling="no" seamless="seamless" src="https://plot.ly/~RPlotBot/1915.embed" width="800" frameBorder="0"></iframe>
 
 Together, `group` and `subplot()` can be used to anchor traces onto different axes. In this example, each trace binds itself to one of the 3 x axes with one of these arguments: `xaxis = "x1"`, `xaxis = "x2"`, `xaxis = "x3"`.
 
@@ -65,11 +65,11 @@ Together, `group` and `subplot()` can be used to anchor traces onto different ax
 ```r
 iris$id <- as.integer(iris$Species)
 p <- plot_ly(iris, x = Petal.Length, y = Petal.Width, group = Species,
-             xaxis = paste0("x", id), mode = "markers", filename="r-docs/grouped-axes")
+             xaxis = paste0("x", id), mode = "markers")
 subplot(p)
 ```
 
-<iframe height="600" id="igraph" scrolling="no" seamless="seamless" src="https://plot.ly/~RPlotBot/1853.embed" width="800" frameBorder="0"></iframe>
+<iframe height="600" id="igraph" scrolling="no" seamless="seamless" src="https://plot.ly/~RPlotBot/1917.embed" width="800" frameBorder="0"></iframe>
 
 ### Customizing Axes
 
@@ -78,7 +78,7 @@ You can customize each of these axes. "`x1`", "`x2`", "`x3`", etc assigned in th
 
 ```r
 p <- plot_ly(iris, x = Petal.Length, y = Petal.Width, group = Species,
-             xaxis = paste0("x", id), mode = "markers", filename="r-docs/customized-axes")
+             xaxis = paste0("x", id), mode = "markers")
 
 layout(
     subplot(p),
@@ -92,7 +92,7 @@ layout(
 )
 ```
 
-<iframe height="600" id="igraph" scrolling="no" seamless="seamless" src="https://plot.ly/~RPlotBot/1855.embed" width="800" frameBorder="0"></iframe>
+<iframe height="600" id="igraph" scrolling="no" seamless="seamless" src="https://plot.ly/~RPlotBot/1919.embed" width="800" frameBorder="0"></iframe>
 
 If you are familar with [plotly.js](https://plot.ly/javascript), you might notice that `subplot` is generating axis objects with the appropriate anchor and domain properties. If you are interested, [view how subplots are created in plotly.js](https://plot.ly/javascript/subplots) or [view the JSON representation of this graph](https://plot.ly/~RplotBot/1408.json).
 
@@ -101,7 +101,7 @@ Since `subplot()` does not assume x/y axes are on a common scale, it does not im
 
 ```r
 p <- plot_ly(iris, x = Petal.Length, y = Petal.Width, group = Species,
-             xaxis = paste0("x", id), mode = "markers", filename="r-docs/restricted-axes")
+             xaxis = paste0("x", id), mode = "markers")
 
 p <- layout(
   p,
@@ -112,14 +112,14 @@ p <- layout(
 subplot(p)
 ```
 
-<iframe height="600" id="igraph" scrolling="no" seamless="seamless" src="https://plot.ly/~RPlotBot/1857.embed" width="800" frameBorder="0"></iframe>
+<iframe height="600" id="igraph" scrolling="no" seamless="seamless" src="https://plot.ly/~RPlotBot/1921.embed" width="800" frameBorder="0"></iframe>
 
 Note that the `xaxis` and `yaxis` properties that are specified in `layout` are transferred to all of the `xaxis` and `yaxis` keys that are created in the `subplot` command. The example above could also be written as:
 
 
 ```r
 p <- plot_ly(iris, x = Petal.Length, y = Petal.Width, group = Species,
-             xaxis = paste0("x", id), mode = "markers", filename="r-docs/restricted-axes-2")
+             xaxis = paste0("x", id), mode = "markers")
 
 p <- subplot(p)
 layout(p,
@@ -134,7 +134,7 @@ layout(p,
 )
 ```
 
-<iframe height="600" id="igraph" scrolling="no" seamless="seamless" src="https://plot.ly/~RPlotBot/1859.embed" width="800" frameBorder="0"></iframe>
+<iframe height="600" id="igraph" scrolling="no" seamless="seamless" src="https://plot.ly/~RPlotBot/1923.embed" width="800" frameBorder="0"></iframe>
 
 So, if you would like all of your axes to have the same properties, assign the properties in `layout` before splitting the traces into subplots.
 
@@ -156,14 +156,19 @@ p
 
 <iframe height="600" id="igraph" scrolling="no" seamless="seamless" src="https://plot.ly/~RPlotBot/1819.embed" width="800" frameBorder="0"></iframe>
 
-Then update or modify the plot and view the results in the same plot.
+Then update or modify the plot and view the modifications in the same plot.
 
 
 ```r
 p <- layout(title="Overwrite Subplots")
 p <- plotly_build(subplot(p))
 p$filename <- "overwrite_subplot"
+p
 ```
+
+<iframe height="600" id="igraph" scrolling="no" seamless="seamless" src="https://plot.ly/~RPlotBot/1819.embed" width="800" frameBorder="0"></iframe>
+
+Notice the first plot also displays the title even though it was added after this plot was generated. This is because the file was updated (i.e., a new plot is not generated). 
 
 ### Subplot Maps
 
@@ -206,6 +211,6 @@ p <- plot_ly(df, type = 'scattergeo', lon = LON, lat = LAT, group = YEAR,
 subplot(p, nrows = 9)
 ```
 
-<iframe height="900" id="igraph" scrolling="no" seamless="seamless" src="https://plot.ly/~RPlotBot/1867.embed" width="800" frameBorder="0"></iframe>
+<iframe height="900" id="igraph" scrolling="no" seamless="seamless" src="https://plot.ly/~RPlotBot/1931.embed" width="800" frameBorder="0"></iframe>
 
 [View more examples of maps in plotly and R.](https://plot.ly/r/#maps)
