--- a/_posts/r/2015-07-30-filenames.Rmd
+++ b/_posts/r/2015-07-30-filenames.Rmd
@@ -38,22 +38,23 @@ plot_ly(x = c(1, 2), y = c(1, 2), filename="name-of-my-plotly-file")
 ```
 
 Overwriting your graph works a bit differently when using ```subplots```.
-To update a graph with ```subplots``` use ```plotly_build()``` and then assign the ```filename``` after.
+To update a graph with ```subplots``` use ```plotly_build()``` and then assign the ```filename```.
 
 ```{r, message=FALSE}
-iris$id <- as.integer(iris$Species)
-p <- plot_ly(iris, x = Petal.Length, y = Petal.Width, group = Species,
-						 xaxis = paste0("x", id), mode = "markers")
-p <- plotly_build(subplot(p))
-p$filename <- "overwrite_subplot"
+p <- plotly_build(subplot(
+	plot_ly(x = c(1, 2), y = c(1, 2)),
+	plot_ly(x = c(1, 2), y = c(2, 1)),
+	margin = 0.05
+	)
+)
+p$filename <- "overwrite_subplots"
 ```
 
 Add modifications then see the updated graph at the same plotly URL:
 
 ```{r, message=FALSE}
-p <- layout(title="Overwrite Subplots")
-p <- plotly_build(subplot(p))
-p$filename <- "overwrite_subplot"
+p <- layout(showlegend = FALSE, title = "Overwrite Subplots")
+p$filename <- "overwrite_subplots"
 p
 ```
 
