more lil TODO notes about the reference pages

--- a/TODO
+++ b/TODO
@@ -59,3 +59,14 @@
 - better description of data_array
 - missing period: 'anchor This anchor ' #histogram2d-colorbar-xanchor
 #layout-font? - default: {"family"=>"\"Open sans\", verdana, arial, sans-serif", "size"=>12, "color"=>"#444"}
+human readable python trace name?
+descriptions on object keys, like scatter.marker, or scatter.marker.line
+font tooltip content is messed up
+how to include trace layout properties?
+dash types
+remove smith from layout?
+describe _isSubplotObj
+try two column intro code block to make comments easier to read
+does python use Axis or XAxis?
+whats the forward slash in the yref regex?  "/^y[0-9]/"$"
+describe plotly_build in R somewhere, somehow
