r doc subplot update

--- a/_posts/r/2015-07-30-subplots.Rmd
+++ b/_posts/r/2015-07-30-subplots.Rmd
@@ -63,6 +63,18 @@ p <- plot_ly(iris, x = Petal.Length, y = Petal.Width, group = Species,
 subplot(p)
 ```
 
+### Coordinating Color Across Subplots
+
+To achieve a consistent color/variable relationship across the subplots, use the `color` argument with `subplot()` .
+
+```{r, message=FALSE}
+subplot(
+	plot_ly(iris, x = Sepal.Length, y = Sepal.Width, color = Species, mode = "markers"),
+	plot_ly(iris, x = Petal.Length, y = Petal.Width, color = Species, mode = "markers"),
+	margin = 0.05
+)
+```
+
 ### Customizing Axes
 
 You can customize each of these axes. "`x1`", "`x2`", "`x3`", etc assigned in the "traces" is related to "`xaxis`", "`xaxis2`", "`xaxis2`", "`xaxis3`" etc inside the plot's `layout`. [View the entire list of configurable axis properties](https://plot.ly/r/reference/#xaxis). Note that it is "`xaxis`" not "`xaxis1`".
