--- a/_posts/r/2015-07-30-get-requests.Rmd
+++ b/_posts/r/2015-07-30-get-requests.Rmd
@@ -35,15 +35,17 @@ Once the figure is downloaded, you can edit it like any plotly object. This will
 layout(fig, title = paste("Modified on ", Sys.time()))
 ```
 
-# Add Traces with `get_figure` and `subplot`.
+### Adding Traces with `get_figure` and `subplot`.
 
 After downloading a figure with subplots, use `plotly_build` to build the figure. 
+
 ```{r, echo = FALSE, message=FALSE}
 fig <- get_figure("chelsea_lyn", "6343")
 fig <- plotly_build(fig)
 ```
 
 Add new traces to `fig$data[[(length(fig$data)+1)]]` as a list
+
 ```{r, echo = FALSE, message=FALSE}
 fig$data[[(length(fig$data)+1)]] <- list(x=c(1,2), y=c(1,2), xaxis="x2", yaxis="y2")
 fig
