update r get-req doc w/ subplot ex

--- a/_posts/r/2015-07-30-get-requests.Rmd
+++ b/_posts/r/2015-07-30-get-requests.Rmd
@@ -39,14 +39,14 @@ layout(fig, title = paste("Modified on ", Sys.time()))
 
 After downloading a figure with subplots, use `plotly_build` to build the figure. 
 
-```{r, echo = FALSE, message=FALSE}
+```{r, message=FALSE}
 fig <- get_figure("chelsea_lyn", "6343")
 fig <- plotly_build(fig)
 ```
 
 Add new traces to `fig$data[[(length(fig$data)+1)]]` as a list
 
-```{r, echo = FALSE, message=FALSE}
+```{r, message=FALSE}
 fig$data[[(length(fig$data)+1)]] <- list(x=c(1,2), y=c(1,2), xaxis="x2", yaxis="y2")
 fig
 ```
