snap, inline images in emails isn't really supported

--- a/_posts/user_guide_python/email-reports.ipynb
+++ b/_posts/user_guide_python/email-reports.ipynb
@@ -165,13 +165,27 @@
    "source": [
     "## Notes\n",
     "\n",
+    "### Sharing Private Images\n",
+    "\n",
+    "Plotly graphs are *public* by default. This means that they will appear on your profile, the plotly feed, google search results.\n",
+    "\n",
+    "To share private images in an email, make your graphs [\"secret\"](plot.ly/python/privacy). The graphs will be unlisted from your profile but will still be accessible by the email server via a direct link - no login authentication is required.\n",
+    "\n",
+    "Secret links have the form: [https://plot.ly/~&lt;username&gt;/&lt;id&gt;?share_key=&lt;share_key&gt;](). Secret images have \".png\" after \"id\" and before the \"?\". For example:\n",
+    "\n",
+    "This graph: https://plot.ly/~christopherp/809?share_key=hvNqw1G8ghFzSmsXzFojw0\n",
+    "\n",
+    "Has the secret unlisted image url: https://plot.ly/~christopherp/809.png?share_key=hvNqw1G8ghFzSmsXzFojw0\n",
+    "\n",
     "### The graph images\n",
     "\n",
     "The HTML template that we used includes the images by their URL on the Plotly server. The viewers of the email must have permission on Plotly to view your graph. Graphs sent in emails by Plotly Enterprise users on private networks will not be able to be viewed outside of the network.\n",
     "\n",
     "The reader of your email will always see the latest verison of the graph! This is great - if you tweak your graph or add an annotation, you don't need to resend the email out. If your graph updates regularly, e.g. every hour, the reader will see the latest, most updated version of the chart.\n",
     "\n",
-    "If you want to keep your graph private, or share it outside of your network with Plotly Enterprise, then you can download the image and include it inline. Here is a simple template to download the image:"
+    "For some email clients, you can download the image and include it inline the email. This allows you to share the graph outside of your network with Plotly Enterprise, and keep the graph entirely private. [Note that this is not widely supported.](https://www.campaignmonitor.com/blog/email-marketing/2013/02/embedded-images-in-html-email/) Here is the support from a few years ago: ![embedded image support in emails from 2003](http://i.imgur.com/WIRhmCz.png)\n",
+    "\n",
+    "Here is how to embed images inline in HTML:"
    ]
   },
   {
@@ -321,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -330,15 +344,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\u001b[33mYou are using pip version 7.1.0, however version 7.1.2 is available.\r\n",
+      "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\r\n",
       "Requirement already up-to-date: publisher in /Users/chriddyp/Repos/venvpy27/lib/python2.7/site-packages\r\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/chriddyp/Repos/venvpy27/lib/python2.7/site-packages/publisher/publisher.py:50: UserWarning: Did you \"Save\" this notebook before running this command? Remember to save, always save.\n",
-      "  warnings.warn('Did you \"Save\" this notebook before running this command? '\n"
      ]
     }
    ],
@@ -351,6 +359,15 @@
     "                  'How to email Plotly graphs in HTML reports with Python.',\n",
     "                   uses_plotly_offline=True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
