custom hovertext example

--- a/_posts/pandas/subplots/subplots.ipynb
+++ b/_posts/pandas/subplots/subplots.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Pandas Subplots"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -44,38 +51,38 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>2015-01-01</th>\n",
-       "      <td>0.491491</td>\n",
-       "      <td>0.184521</td>\n",
-       "      <td>-118.429410</td>\n",
-       "      <td>120.178641</td>\n",
+       "      <td>1.816759</td>\n",
+       "      <td>-0.908495</td>\n",
+       "      <td>82.280981</td>\n",
+       "      <td>168.909237</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2015-01-02</th>\n",
-       "      <td>0.818405</td>\n",
-       "      <td>0.008959</td>\n",
-       "      <td>-73.691289</td>\n",
-       "      <td>161.079313</td>\n",
+       "      <td>0.659670</td>\n",
+       "      <td>-1.797243</td>\n",
+       "      <td>206.460737</td>\n",
+       "      <td>218.634017</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2015-01-03</th>\n",
-       "      <td>0.898984</td>\n",
-       "      <td>-0.836478</td>\n",
-       "      <td>23.064470</td>\n",
-       "      <td>210.055338</td>\n",
+       "      <td>-0.255927</td>\n",
+       "      <td>-1.576062</td>\n",
+       "      <td>167.976038</td>\n",
+       "      <td>248.750688</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2015-01-04</th>\n",
-       "      <td>2.263388</td>\n",
-       "      <td>-0.982033</td>\n",
-       "      <td>105.042639</td>\n",
-       "      <td>322.975506</td>\n",
+       "      <td>0.901447</td>\n",
+       "      <td>-2.015771</td>\n",
+       "      <td>200.604287</td>\n",
+       "      <td>161.162454</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2015-01-05</th>\n",
-       "      <td>2.591074</td>\n",
-       "      <td>-0.524599</td>\n",
-       "      <td>212.715576</td>\n",
-       "      <td>324.552747</td>\n",
+       "      <td>0.288140</td>\n",
+       "      <td>-2.313237</td>\n",
+       "      <td>172.220170</td>\n",
+       "      <td>311.740292</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -83,11 +90,11 @@
       ],
       "text/plain": [
        "                   a         b           c           d\n",
-       "2015-01-01  0.491491  0.184521 -118.429410  120.178641\n",
-       "2015-01-02  0.818405  0.008959  -73.691289  161.079313\n",
-       "2015-01-03  0.898984 -0.836478   23.064470  210.055338\n",
-       "2015-01-04  2.263388 -0.982033  105.042639  322.975506\n",
-       "2015-01-05  2.591074 -0.524599  212.715576  324.552747"
+       "2015-01-01  1.816759 -0.908495   82.280981  168.909237\n",
+       "2015-01-02  0.659670 -1.797243  206.460737  218.634017\n",
+       "2015-01-03 -0.255927 -1.576062  167.976038  248.750688\n",
+       "2015-01-04  0.901447 -2.015771  200.604287  161.162454\n",
+       "2015-01-05  0.288140 -2.313237  172.220170  311.740292"
       ]
      },
      "execution_count": 2,
@@ -111,7 +118,7 @@
     {
      "data": {
       "text/html": [
-       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\"seamless=\"seamless\" src=\"https://plot.ly/~christopherp/1171.embed\" height=\"525px\" width=\"100%\"></iframe>"
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\"seamless=\"seamless\" src=\"https://plot.ly/~PlotBot/737.embed\" height=\"525px\" width=\"100%\"></iframe>"
       ],
       "text/plain": [
        "<plotly.tools.PlotlyDisplay object>"
@@ -136,7 +143,7 @@
     {
      "data": {
       "text/html": [
-       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\"seamless=\"seamless\" src=\"https://plot.ly/~christopherp/1173.embed\" height=\"525px\" width=\"100%\"></iframe>"
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\"seamless=\"seamless\" src=\"https://plot.ly/~PlotBot/739.embed\" height=\"525px\" width=\"100%\"></iframe>"
       ],
       "text/plain": [
        "<plotly.tools.PlotlyDisplay object>"
@@ -207,7 +214,7 @@
     {
      "data": {
       "text/html": [
-       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\"seamless=\"seamless\" src=\"https://plot.ly/~christopherp/1169.embed\" height=\"525px\" width=\"100%\"></iframe>"
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\"seamless=\"seamless\" src=\"https://plot.ly/~PlotBot/741.embed\" height=\"525px\" width=\"100%\"></iframe>"
       ],
       "text/plain": [
        "<plotly.tools.PlotlyDisplay object>"
@@ -227,12 +234,78 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "View more [examples of subplots with Plotly's python syntax](https://plot.ly/python/subplots)."
+    "This secondary subplot decouples the hover text from the charts in the top pane and the charts in the bottom pane. You can always customize your hover text, so that all four values are always present:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is the format of your plot grid:\n",
+      "[ (1,1) x1,y1 ]\n",
+      "[ (2,1) x1,y2 ]\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "hover_text = df.apply(lambda r: '<br>'.join(['{}: {}'.format(c, r[c]) \n",
+    "                                            for c in df.columns]), axis=1)\n",
+    "\n",
+    "fig = tls.make_subplots(rows=2, cols=1, shared_xaxes=True)\n",
+    "\n",
+    "for col in ['a', 'b']:\n",
+    "    fig.append_trace({'x': df.index, 'y': df[col], 'type': 'scatter', \n",
+    "                      'name': col, 'text': hover_text}, 1, 1)\n",
+    "\n",
+    "for col in ['c', 'd']:\n",
+    "    fig.append_trace({'x': df.index, 'y': df[col], 'type': 'bar', \n",
+    "                      'name': col, 'text': hover_text}, 2, 1)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\"seamless=\"seamless\" src=\"https://plot.ly/~PlotBot/743.embed\" height=\"525px\" width=\"100%\"></iframe>"
+      ],
+      "text/plain": [
+       "<plotly.tools.PlotlyDisplay object>"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import plotly.plotly as py\n",
+    "py.iplot(fig, filename='pandas/mixed-type subplots with custom hover text')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "View more [examples of subplots with Plotly's python syntax](https://plot.ly/python/subplots)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -268,6 +341,16 @@
       "\u001b[33mYou are using pip version 7.1.0, however version 7.1.2 is available.\n",
       "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n",
       "Requirement already up-to-date: publisher in /Users/chriddyp/Repos/dashboardsly/vv/lib/python2.7/site-packages\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/chriddyp/Repos/dashboardsly/vv/lib/python2.7/site-packages/publisher/publisher.py:53: UserWarning:\n",
+      "\n",
+      "Did you \"Save\" this notebook before running this command? Remember to save, always save.\n",
+      "\n"
      ]
     }
    ],
