--- a/_posts/python/distplot/distplots.ipynb
+++ b/_posts/python/distplot/distplots.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -53,7 +53,7 @@
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -95,7 +95,7 @@
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -147,7 +147,7 @@
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -209,7 +209,7 @@
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -263,7 +263,7 @@
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -315,7 +315,7 @@
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -367,7 +367,7 @@
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -419,7 +419,7 @@
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -578,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -613,36 +613,14 @@
      "text": [
       "\u001b[33mYou are using pip version 7.1.0, however version 7.1.2 is available.\n",
       "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n",
-      "Collecting publisher\n",
-      "  Using cached publisher-0.10.tar.gz\n",
-      "Building wheels for collected packages: publisher\n",
-      "\u001b[31mException:\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/Users/Chelsea/venv2.7/lib/python2.7/site-packages/pip/basecommand.py\", line 223, in main\n",
-      "    status = self.run(options, args)\n",
-      "  File \"/Users/Chelsea/venv2.7/lib/python2.7/site-packages/pip/commands/install.py\", line 293, in run\n",
-      "    wb.build(autobuilding=True)\n",
-      "  File \"/Users/Chelsea/venv2.7/lib/python2.7/site-packages/pip/wheel.py\", line 756, in build\n",
-      "    ensure_dir(output_dir)\n",
-      "  File \"/Users/Chelsea/venv2.7/lib/python2.7/site-packages/pip/utils/__init__.py\", line 70, in ensure_dir\n",
-      "    os.makedirs(path)\n",
-      "  File \"/Users/Chelsea/venv2.7/bin/../lib/python2.7/os.py\", line 150, in makedirs\n",
-      "    makedirs(head, mode)\n",
-      "  File \"/Users/Chelsea/venv2.7/bin/../lib/python2.7/os.py\", line 150, in makedirs\n",
-      "    makedirs(head, mode)\n",
-      "  File \"/Users/Chelsea/venv2.7/bin/../lib/python2.7/os.py\", line 150, in makedirs\n",
-      "    makedirs(head, mode)\n",
-      "  File \"/Users/Chelsea/venv2.7/bin/../lib/python2.7/os.py\", line 157, in makedirs\n",
-      "    mkdir(name, mode)\n",
-      "OSError: [Errno 13] Permission denied: '/Users/Chelsea/Library/Caches/pip/wheels/16'\n",
-      "\u001b[0m\n"
+      "Requirement already up-to-date: publisher in /Users/Chelsea/venv2.7/lib/python2.7/site-packages\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/Chelsea/venv2.7/lib/python2.7/site-packages/publisher/publisher.py:54: UserWarning:\n",
+      "/Users/Chelsea/venv2.7/lib/python2.7/site-packages/publisher/publisher.py:53: UserWarning:\n",
       "\n",
       "Did you \"Save\" this notebook before running this command? Remember to save, always save.\n",
       "\n"
