--- a/_posts/python/distplot/distplots.ipynb
+++ b/_posts/python/distplot/distplots.ipynb
@@ -107,10 +107,10 @@
     "import numpy as np\n",
     "\n",
     "# Add histogram data\n",
-    "x1 = np.random.randn(100)-2  \n",
-    "x2 = np.random.randn(100)  \n",
-    "x3 = np.random.randn(100)+2  \n",
-    "x4 = np.random.randn(100)+4  \n",
+    "x1 = np.random.randn(200)-2  \n",
+    "x2 = np.random.randn(200)  \n",
+    "x3 = np.random.randn(200)+2  \n",
+    "x4 = np.random.randn(200)+4  \n",
     "\n",
     "# Group data together\n",
     "hist_data = [x1, x2, x3, x4]\n",
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -141,13 +141,13 @@
     {
      "data": {
       "text/html": [
-       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\"seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/5625.embed\" height=\"525px\" width=\"100%\"></iframe>"
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\"seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/6793.embed\" height=\"525px\" width=\"100%\"></iframe>"
       ],
       "text/plain": [
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,9 +169,15 @@
     "                'f', 'g', 'h', 'i', 'j', \n",
     "                'k', 'l', 'm', 'n', 'o',\n",
     "                'p', 'q', 'r', 's', 't', \n",
-    "                'u', 'v', 'w', 'x', 'y', 'z']  \n",
+    "                'u', 'v', 'w', 'x', 'y', 'z'] \n",
     "\n",
-    "rug_text = [rug_text_one, rug_text_one]\n",
+    "rug_text_two = ['aa', 'bb', 'cc', 'dd', 'ee',\n",
+    "                'ff', 'gg', 'hh', 'ii', 'jj', \n",
+    "                'kk', 'll', 'mm', 'nn', 'oo',\n",
+    "                'pp', 'qq', 'rr', 'ss', 'tt', \n",
+    "                'uu', 'vv', 'ww', 'xx', 'yy', 'zz'] \n",
+    "\n",
+    "rug_text = [rug_text_one, rug_text_two]\n",
     "\n",
     "colors = ['rgb(0, 0, 100)', 'rgb(0, 200, 200)']\n",
     "\n",
@@ -183,7 +189,7 @@
     "fig['layout'].update(title='Customized Distplot')\n",
     "\n",
     "# Plot!\n",
-    "py.iplot(fig, filename='Distplot with Multiple Datasets', validate=False)"
+    "py.iplot(fig, filename='Distplot Colors', validate=False)"
    ]
   },
   {
@@ -195,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -209,7 +215,7 @@
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,110 +255,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\"seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/6782.embed\" height=\"525px\" width=\"100%\"></iframe>"
-      ],
-      "text/plain": [
-       "<plotly.tools.PlotlyDisplay object>"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import plotly.plotly as py\n",
-    "from plotly.tools import FigureFactory as FF\n",
-    "\n",
-    "import numpy as np\n",
-    "\n",
-    "x1 = np.random.randn(200) - 1 \n",
-    "x2 = np.random.randn(200)\n",
-    "x3 = np.random.randn(200) + 1 \n",
-    "\n",
-    "hist_data = [x1, x2, x3]\n",
-    "\n",
-    "group_labels = ['Group 1', 'Group 2', 'Group 3']\n",
-    "\n",
-    "# Create distplot with curve_type set to 'normal'\n",
-    "fig = FF.create_distplot(hist_data, group_labels, show_hist=False)\n",
-    "\n",
-    "# Add title\n",
-    "fig['layout'].update(title='Curve and Rug Plot')\n",
-    "\n",
-    "# Plot!\n",
-    "py.iplot(fig, filename='curve and rug', validate=False)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Plot Only Hist and Rug"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\"seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/6784.embed\" height=\"525px\" width=\"100%\"></iframe>"
-      ],
-      "text/plain": [
-       "<plotly.tools.PlotlyDisplay object>"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import plotly.plotly as py\n",
-    "from plotly.tools import FigureFactory as FF\n",
-    "\n",
-    "import numpy as np\n",
-    "\n",
-    "x1 = np.random.randn(200) - 1 \n",
-    "x2 = np.random.randn(200)\n",
-    "x3 = np.random.randn(200) + 1 \n",
-    "\n",
-    "hist_data = [x1, x2, x3]\n",
-    "\n",
-    "group_labels = ['Group 1', 'Group 2', 'Group 3']\n",
-    "\n",
-    "# Create distplot with curve_type set to 'normal'\n",
-    "fig = FF.create_distplot(hist_data, group_labels, bin_size=.25, show_curve=False)\n",
-    "\n",
-    "# Add title\n",
-    "fig['layout'].update(title='Hist and Rug Plot')\n",
-    "\n",
-    "# Plot!\n",
-    "py.iplot(fig, filename='hist and rug', validate=False)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Plot Only Hist and Curve"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 10,
    "metadata": {
     "collapsed": false
@@ -361,7 +263,7 @@
     {
      "data": {
       "text/html": [
-       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\"seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/6786.embed\" height=\"525px\" width=\"100%\"></iframe>"
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\"seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/6795.embed\" height=\"525px\" width=\"100%\"></iframe>"
       ],
       "text/plain": [
        "<plotly.tools.PlotlyDisplay object>"
@@ -387,13 +289,117 @@
     "group_labels = ['Group 1', 'Group 2', 'Group 3']\n",
     "\n",
     "# Create distplot with curve_type set to 'normal'\n",
+    "fig = FF.create_distplot(hist_data, group_labels, show_hist=False)\n",
+    "\n",
+    "# Add title\n",
+    "fig['layout'].update(title='Curve and Rug Plot')\n",
+    "\n",
+    "# Plot!\n",
+    "py.iplot(fig, filename='Curve and Rug', validate=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Plot Only Hist and Rug"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\"seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/6797.embed\" height=\"525px\" width=\"100%\"></iframe>"
+      ],
+      "text/plain": [
+       "<plotly.tools.PlotlyDisplay object>"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import plotly.plotly as py\n",
+    "from plotly.tools import FigureFactory as FF\n",
+    "\n",
+    "import numpy as np\n",
+    "\n",
+    "x1 = np.random.randn(200) - 1 \n",
+    "x2 = np.random.randn(200)\n",
+    "x3 = np.random.randn(200) + 1 \n",
+    "\n",
+    "hist_data = [x1, x2, x3]\n",
+    "\n",
+    "group_labels = ['Group 1', 'Group 2', 'Group 3']\n",
+    "\n",
+    "# Create distplot with curve_type set to 'normal'\n",
+    "fig = FF.create_distplot(hist_data, group_labels, bin_size=.25, show_curve=False)\n",
+    "\n",
+    "# Add title\n",
+    "fig['layout'].update(title='Hist and Rug Plot')\n",
+    "\n",
+    "# Plot!\n",
+    "py.iplot(fig, filename='Hist and Rug', validate=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Plot Only Hist and Curve"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\"seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/6799.embed\" height=\"525px\" width=\"100%\"></iframe>"
+      ],
+      "text/plain": [
+       "<plotly.tools.PlotlyDisplay object>"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import plotly.plotly as py\n",
+    "from plotly.tools import FigureFactory as FF\n",
+    "\n",
+    "import numpy as np\n",
+    "\n",
+    "x1 = np.random.randn(200) - 1 \n",
+    "x2 = np.random.randn(200)\n",
+    "x3 = np.random.randn(200) + 1 \n",
+    "\n",
+    "hist_data = [x1, x2, x3]\n",
+    "\n",
+    "group_labels = ['Group 1', 'Group 2', 'Group 3']\n",
+    "\n",
+    "# Create distplot with curve_type set to 'normal'\n",
     "fig = FF.create_distplot(hist_data, group_labels, bin_size=.2, show_rug=False)\n",
     "\n",
     "# Add title\n",
     "fig['layout'].update(title='Hist and Curve Plot')\n",
     "\n",
     "# Plot!\n",
-    "py.iplot(fig, filename='hist and curve', validate=False)"
+    "py.iplot(fig, filename='Hist and Curve', validate=False)"
    ]
   },
   {
@@ -405,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -419,7 +425,7 @@
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -446,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
