--- a/_posts/r/2015-07-30-3d-scatter-plots.Rmd
+++ b/_posts/r/2015-07-30-3d-scatter-plots.Rmd
@@ -33,6 +33,13 @@ df <- setNames(data.frame(obs), c("x", "y", "z"))
 
 library(plotly)
 plot_ly(df, x = x, y = y, z = z, type = "scatter3d", mode = "markers", filename="r-docs/3d-scatter")
+```
 
+## 3D Scatter Plot with Hover Text
 
+```{r, message=FALSE}
+set.seed(100)
+d <- diamonds[sample(nrow(diamonds), 1000), ]
+plot_ly(d, x = carat, y = price, z=depth, text = paste("Clarity: ", clarity),
+        type="scatter3d", mode="markers", filename="r-docs/3d-scatter-with-hover-text")
 ```
