markdown cell to code cell fix

--- a/_posts/tutorials/grid-api.ipynb
+++ b/_posts/tutorials/grid-api.ipynb
@@ -135,8 +135,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
     "import plotly.plotly as py\n",
     "from plotly.tools import FigureFactory as FF\n",
@@ -690,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
