fix formatting issue. thx @sudburyrob!

--- a/_posts/tutorials/survival_analysis.ipynb
+++ b/_posts/tutorials/survival_analysis.ipynb
@@ -13,7 +13,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
     "<h2 id=\"tocheading\">Table of Contents</h2>\n",
     "<div id=\"toc\"><ul class=\"toc\"><li><a href=\"#Survival-Analysis-with-Plotly:-R-vs.-Python\">I. Survival Analysis with Plotly: R vs Python</a><a class=\"anchor-link\" href=\"#Survival-Analysis-with-Plotly:-R-vs.-Python\">¶</a></li><ul class=\"toc\"><li><a href=\"#Introduction\">I. Introduction</a><a class=\"anchor-link\" href=\"#Introduction\">¶</a></li><li><a href=\"#Censoring\">II. Censoring</a><a class=\"anchor-link\" href=\"#Censoring\">¶</a></li><li><a href=\"#Loading-data-into-python-and-R\">III. Loading data into Python and R</a><a class=\"anchor-link\" href=\"#Loading-data-into-python-and-R\">¶</a></li></ul><li><a href=\"#Estimating-survival-with-Kaplan-Meier\">II. Estimating survival with Kaplan-Meier</a><a class=\"anchor-link\" href=\"#Estimating-survival-with-Kaplan-Meier\">¶</a></li><ul class=\"toc\"><ul class=\"toc\"><li><a href=\"#Using-R\">I. Using R</a><a class=\"anchor-link\" href=\"#Using-R\">¶</a></li><li><a href=\"#Using-Python\">II. Using Python</a><a class=\"anchor-link\" href=\"#Using-Python\">¶</a></li></ul></ul><li><a href=\"#Multiple-Types\">III. Multiple Types</a><a class=\"anchor-link\" href=\"#Multiple-Types\">¶</a></li><ul class=\"toc\"><ul class=\"toc\"><li><a href=\"#Using-R\">I. Using R</a><a class=\"anchor-link\" href=\"#Using-R\">¶</a></li><li><a href=\"#Using-Python\">II. Using Python</a><a class=\"anchor-link\" href=\"#Using-Python\">¶</a></li></ul></ul><li><a href=\"#Testing-for-Difference\">IV. Testing for Difference</a><a class=\"anchor-link\" href=\"#Testing-for-Difference\">¶</a></li><ul class=\"toc\"><ul class=\"toc\"><li><a href=\"#Using-R\">I. Using R</a><a class=\"anchor-link\" href=\"#Using-R\">¶</a></li><li><a href=\"#Using-Python\">II. Using Python</a><a class=\"anchor-link\" href=\"#Using-Python\">¶</a></li></ul></ul><li><a href=\"#Estimating-Hazard-Rates\">V. Estimating Hazard Rates</a><a class=\"anchor-link\" href=\"#Estimating-Hazard-Rates\">¶</a></li><ul class=\"toc\"><ul class=\"toc\"><li><a href=\"#Using-R\">I. Using R</a><a class=\"anchor-link\" href=\"#Using-R\">¶</a></li><li><a href=\"#Using-Python\">II. Using Python</a><a class=\"anchor-link\" href=\"#Using-Python\">¶</a></li></ul></ul></ul></div>"
    ]
@@ -1398,7 +1397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -1431,15 +1430,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already up-to-date: publisher in /Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages\r\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/publisher/publisher.py:50: UserWarning: Did you \"Save\" this notebook before running this command? Remember to save, always save.\n",
-      "  warnings.warn('Did you \"Save\" this notebook before running this command? '\n"
+      "\u001b[33mYou are using pip version 7.1.0, however version 7.1.2 is available.\n",
+      "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n",
+      "Requirement already up-to-date: publisher in /Users/chriddyp/Repos/venvpy27/lib/python2.7/site-packages\n"
      ]
     }
    ],
