edit python network doc

--- a/_posts/python/network/networkx.ipynb
+++ b/_posts/python/network/networkx.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Network Graphs with Plotly & NetworkX in Python"
+    "# Network Graphs with Plotly"
    ]
   },
   {
@@ -25,7 +25,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Store position as node attribute data for random_geometric_graph"
+    "Store position as node attribute data for random_geometric_graph"
    ]
   },
   {
@@ -44,7 +44,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Find node near center (0.5, 0.5)"
+    "Find node near center (0.5, 0.5)"
    ]
   },
   {
@@ -69,7 +69,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Color by path length from node near center"
+    "Color by path length from node near center"
    ]
   },
   {
@@ -87,7 +87,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Add edges as disconnected lines in a single trace and nodes as a scatter trace"
+    "Add edges as disconnected lines in a single trace and nodes as a scatter trace"
    ]
   },
   {
@@ -144,7 +144,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Color node points by the number of connections. \n",
+    "Color node points by the number of connections. \n",
+    "\n",
     "Another option would be to size points by the number of connections \n",
     "i.e. ```node_trace['marker']['size'].append(len(adjacencies))``` \n"
    ]
@@ -167,7 +168,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Create figure and send to Plotly"
+    "Create figure and send to Plotly"
    ]
   },
   {
@@ -273,10 +274,11 @@
     "import publisher\n",
     "publisher.publish(\n",
     "    'networkx.ipynb', 'python/network-graphs', 'Network Graphs',\n",
-    "    'How to make interactive network graphs in Python with NetworkX and Plotly. ',\n",
+    "    'How to make Network Graphs in Python with Plotly. '\n",
+    "    'One examples of a network graph with NetworkX',\n",
     "    title = 'Python Network Graphs | plotly',\n",
     "    thumbnail='/images/net.png', language='python',\n",
-    "    page_type='example_index', has_thumbnail='true', display_as='chart_type', order=28)"
+    "    page_type='example_index', has_thumbnail='true', display_as='chart_type', order=32) "
    ]
   },
   {
