fix name for network doc

--- a/_posts/python/network/networkx.ipynb
+++ b/_posts/python/network/networkx.ipynb
@@ -25,7 +25,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Store position as node attribute data for random_geometric_graph"
+    "Store position as node attribute data for random_geometric_graph and find node near center (0.5, 0.5)"
    ]
   },
   {
@@ -37,24 +37,8 @@
    "outputs": [],
    "source": [
     "G=nx.random_geometric_graph(200,0.125)\n",
-    "pos=nx.get_node_attributes(G,'pos')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Find node near center (0.5, 0.5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
+    "pos=nx.get_node_attributes(G,'pos')\n",
+    "\n",
     "dmin=1\n",
     "ncenter=0\n",
     "for n in pos:\n",
@@ -62,24 +46,8 @@
     "    d=(x-0.5)**2+(y-0.5)**2\n",
     "    if d<dmin:\n",
     "        ncenter=n\n",
-    "        dmin=d"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Color by path length from node near center"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
+    "        dmin=d\n",
+    "        \n",
     "p=nx.single_source_shortest_path_length(G,ncenter)"
    ]
   },
@@ -92,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -152,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -173,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -187,7 +155,7 @@
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
